Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
d8e57433f (dev), c213fdfef (6.6)
Description
To reproduce:
- Choose any surface graph
- Pick a point to switch to slice view
- Switch back to surface view
- Try moving the camera
Attachments
For Gerrit Dashboard: QTBUG-116438 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
499422,3 | Fix camera rotation freeze after creating slice view | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
499578,2 | Fix camera rotation freeze after creating slice view | 6.6 | qt/qtgraphs | Status: MERGED | +2 | 0 |