Fix camera rotation freeze after creating slice view

The reason for why the selected point can not be set is unclear, but
removing the line does not seem to have any repercussions for the
behavior of the graphs.

Fixes: QTBUG-116438
Change-Id: I66fa9b46bdae3f2b5e1aba6d1ddb8a7e4ff25e7d
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit d8e57433fd609da7228ddf022b736c588213c225)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>